fixed styling issue where page appeared zoomed in on small screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,11 @@
     @apply text-lg leading-relaxed text-justify mb-6 max-w-[50rem];
   line-height: 1.8;
 }
+
+.Outlined{
+    border:2px solid red;
+    overflow-x: hidden;
+}
+.Outlined >*{
+    border:2px solid greenyellow;
+}
